# wickra-compile

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THREAT_MODEL.md  clippy.toml  deny.toml  lychee.toml  osv-scanner.toml  repo-metadata.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: bench.yml  ci.yml  release.yml
bindings/c/: Cargo.toml  README.md  cbindgen.toml
bindings/c/src/: lib.rs
bindings/csharp/: README.md
bindings/csharp/WickraCompile/: Compiler.cs  DllResolver.cs  Native.cs  README.md  WickraCompile.csproj
bindings/csharp/WickraCompile.Tests/: CompilerTests.cs  GoldenTests.cs  WickraCompile.Tests.csproj
bindings/go/: README.md  compile_test.go  go.mod  golden_test.go  wickra.go
bindings/go/include/: wickra_compile.h
bindings/java/: README.md  pom.xml
bindings/java/src/main/java/org/wickra/compile/: Compiler.java  Native.java
bindings/java/src/test/java/org/wickra/compile/: CompilerTest.java  GoldenTest.java
bindings/node/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
bindings/node/__tests__/: compile.test.js  completeness.test.js  golden.test.js
bindings/node/npm/darwin-arm64/: package.json
bindings/node/npm/darwin-x64/: package.json
bindings/node/npm/linux-arm64-gnu/: package.json
bindings/node/npm/linux-x64-gnu/: package.json
bindings/node/npm/win32-arm64-msvc/: package.json
bindings/node/npm/win32-x64-msvc/: package.json
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/python/wickra_compile/: __init__.py  __init__.pyi
bindings/python/src/: lib.rs
bindings/python/tests/: test_completeness.py  test_golden.py  test_smoke.py
bindings/r/: DESCRIPTION  NAMESPACE  README.md
bindings/r/R/: compile.R
bindings/r/src/: Makevars  Makevars.win  wickra_compile.c
bindings/r/tests/: run_tests.R
bindings/wasm/: Cargo.toml  README.md
bindings/wasm/src/: lib.rs
bindings/wasm/tests/: golden.test.js
crates/compile-bench/: Cargo.toml
crates/compile-bench/benches/: compile.rs
crates/compile-bench/src/: lib.rs
crates/compile-cli/: Cargo.toml
crates/compile-cli/src/: args.rs  main.rs  run.rs
crates/compile-core/: Cargo.toml
crates/compile-core/src/: builder.rs  canonical.rs  codegen.rs  compiler.rs  config.rs  error.rs  lib.rs  manifest.rs  spec.rs  targets.rs  templates.rs
crates/compile-core/tests/: canonical_determinism.rs  conformance.rs  golden.rs  proptest_invariants.rs
docs/: ARCHITECTURE.md  COMPILESPEC.md  Cookbook.md  DETERMINISM.md  TARGETS.md  TEMPLATES.md
examples/: README.md
examples/c/: CMakeLists.txt  compile.c  compile.cpp
examples/csharp/Compile/: Compile.csproj  Program.cs
examples/data/candles/: btcusdt.csv
examples/data/specs/: no_std_blink.json  sma_cross.json
examples/go/: compile.go  go.mod
examples/java/: Compile.java
examples/node/: compile.js  package.json
examples/python/: compile.py
examples/r/: compile.R
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: canonical_hash.rs  codegen.rs  spec_parse.rs  target_parse.rs
golden/: README.md
golden/candles/: BTCUSDT.csv  ETHUSDT.csv
golden/expected/: binary_daemon.json  ema_trend.json  no_std_blink.json  rsi_reversion.json  sma_cross.json
golden/specs/: binary_daemon.json  ema_trend.json  rsi_reversion.json
