[package]
name = "compile-node"
description = "Node.js bindings for wickra-compile: compile a strategy spec into a standalone deployable."
version.workspace = true
edition.workspace = true
# napi-build requires Rust >= 1.88 (newer than the workspace 1.86 minimum).
rust-version = "1.88"
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
publish = false

[lib]
crate-type = ["cdylib"]

# napi-derive emits its own guarded unsafe; the crate re-allows unsafe locally
# (the workspace forbids it everywhere else).
[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
new_without_default = "allow"

[dependencies]
# The codegen core with the default `build` feature (native → real cargo builds).
compile-core = { path = "../../crates/compile-core", version = "0.1" }
napi = { version = "3.9", features = ["napi8"] }
napi-derive = "3.5"

[build-dependencies]
napi-build = "2"
