[package]
name = "compile-python"
description = "Python bindings for wickra-compile: compile a strategy spec into a standalone deployable."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
publish = false

[lib]
name = "_wickra_compile"
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
# The codegen core with the default `build` feature (native → real cargo builds).
compile-core = { path = "../../crates/compile-core", version = "0.1" }
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py39"] }
