[package]
name = "compile-wasm"
description = "wasm binding for wickra-compile (scaffold stub)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
compile-core = { path = "../../crates/compile-core", version = "0.1" }
