[package]
name = "compile-bench"
description = "Criterion benchmarks for wickra-compile codegen (generate / spec_hash / project_hash)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
compile-core = { path = "../compile-core", version = "0.1" }

[dev-dependencies]
criterion = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "compile"
harness = false
