[package]
name = "wickra-compile"
description = "CLI for wickra-compile: turn a strategy spec into a standalone deployable (WASM, binary, or no_std)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[[bin]]
name = "wickra-compile"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde_json = { workspace = true }
# `build` (default) makes the real cargo-invoking `compile` available to the CLI.
compile-core = { path = "../compile-core", version = "0.1" }
