[package]
name = "compile-core"
description = "Codegen core: compile a Wickra strategy spec into a standalone deployable with a deterministic manifest."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
