[package]
name = "wickra-compile-example"
description = "A runnable Rust example for the Wickra Compile core."
version = "0.1.0"
edition = "2021"
rust-version = "1.86"
license = "MIT OR Apache-2.0"
publish = false

# Detached from the parent workspace so the example builds standalone with
# `cargo run --manifest-path examples/rust/Cargo.toml`.
[workspace]

[[bin]]
name = "compile"
path = "src/main.rs"

[dependencies]
compile-core = { path = "../../crates/compile-core", version = "0.1" }
serde_json = "1"
